Final changes to ./circle/config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
 #
+
 version: 2
 jobs:
   build:
@@ -14,11 +15,19 @@ jobs:
     #   MAVEN_OPTS: -Xmx3200m
     steps:
       - checkout
+
+      # - run:
+      #     name: Install AWS CLI
+      #     command: |
+      #       sudo apt-get -y -qq install awscli
+      #       aws --version
+
       - run:
           name: Install AWS CLI
           command: |
             sudo apt-get -y -qq install awscli
             aws --version
+
       - run:
           name: Build JAR
           command: |
@@ -28,9 +37,14 @@ jobs:
           name: Zip JAR File
           command: |
             cd email-lambda/target
-            cp email-lambda.jar email-lambda.zip 
-
+            cp email-lambda.jar email-lambda.zip
       - run:
+
+          name: Check if renamed
+          command: |
+            cd email-lambda/target
+            pwd  
+
           name: Update Lambda function
           command: |
             aws lambda update-function-code --function-name=password_reset --zip-file=fileb://email-lambda/target/email-lambda.zip
