--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
 #
+
 version: 2
 jobs:
   build:
@@ -14,11 +15,19 @@ jobs:
     #   MAVEN_OPTS: -Xmx3200m
     steps:
       - checkout
+
+      # - run:
+      #     name: Install AWS CLI
+      #     command: |
+      #       sudo apt-get -y -qq install awscli
+      #       aws --version
+
       - run:
           name: Install AWS CLI
           command: |
             sudo apt-get -y -qq install awscli
             aws --version
+
       - run:
           name: Build JAR
           command: |
@@ -29,6 +38,12 @@ jobs:
           command: |
             cd email-lambda/target
             cp email-lambda.jar email-lambda.zip
+      - run:
+
+          name: Check if renamed
+          command: |
+            cd email-lambda/target
+            pwd  
       - run:
           name: Update Lambda function
           command: |
